testsuite/tests/properties/invalid_call/kwargs_before_args/test.lkt
from common import FooNode

class BarNode: FooNode {
    @exported fun bar_prop(): Int = node.many_args(a=1, b=2, 3)
}
